--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,12 +9,25 @@
     <string name="title_item_list">Items</string>
     <string name="title_item_detail">Item Detail</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
 
     <string name="action_example">Example action</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_course">Add Course</string>
+    <string name="add_term">Add Term</string>
+    <string name="add_assessment">Add Assessment</string>
+    <string name="added">ADDED</string>
+    <string name="associated_courses">Associated Courses</string>
+    <string name="add_assoc">+</string>
+    <string name="welcome_banner_text">WELCOME TO COURSE MANAGER</string>
+    <string name="logo">logo</string>
+    <string name="title">Title:</string>
+    <string name="start_date">Start Date:</string>
+    <string name="select_a_date">Select A Date</string>
+    <string name="end_date">End Date:</string>
+    <string name="save">Save</string>
+    <string name="cancel">Cancel</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="swipe_to_add_or_remove_courses">Swipe to add or remove courses:</string>
+    <string name="extra">Extra</string>
+    <string name="dash">-</string>
+    <string name="delete_term_desc">delete Term</string>
 </resources>
